# nrf-mouse

./: .gitignore  README.md
app/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  pin_mapping.md  prj.conf
app/src/: battery.c  battery.h  ble.c  ble.h  ble_hid.c  ble_hid.h  ble_hids.c  ble_hids.h  ble_hids_def.h  business_logic.c  business_logic.h  encoder.c  encoder.h  led.c  led.h  main.c  switch.c  switch.h  usb_hid.c  usb_hid.h
paw3395/: CMakeLists.txt
